Flutter App/final_proj/lib/Services/AirlineBridgeBindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Auto-generated bindings for airline_bridge.dll
class AirlineBridgeBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AirlineBridgeBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AirlineBridgeBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int passenger_signup(
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Char> id,
    ffi.Pointer<ffi.Char> phone,
    ffi.Pointer<ffi.Char> email,
    ffi.Pointer<ffi.Char> pass,
  ) {
    return _passenger_signup(name, id, phone, email, pass);
  }

  late final _passenger_signupPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('passenger_signup');
  late final _passenger_signup = _passenger_signupPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  int passenger_login(ffi.Pointer<ffi.Char> id, ffi.Pointer<ffi.Char> pass) {
    return _passenger_login(id, pass);
  }

  late final _passenger_loginPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('passenger_login');
  late final _passenger_login = _passenger_loginPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  int admin_login(ffi.Pointer<ffi.Char> id, ffi.Pointer<ffi.Char> pass) {
    return _admin_login(id, pass);
  }

  late final _admin_loginPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('admin_login');
  late final _admin_login = _admin_loginPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  int super_admin_login(ffi.Pointer<ffi.Char> id, ffi.Pointer<ffi.Char> pass) {
    return _super_admin_login(id, pass);
  }

  late final _super_admin_loginPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('super_admin_login');
  late final _super_admin_login = _super_admin_loginPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  int admin_add_flight(
    ffi.Pointer<ffi.Char> id,
    ffi.Pointer<ffi.Char> from,
    ffi.Pointer<ffi.Char> to,
    int cap,
    double price,
    ffi.Pointer<ffi.Char> date,
    ffi.Pointer<ffi.Char> time,
  ) {
    return _admin_add_flight(id, from, to, cap, price, date, time);
  }

  late final _admin_add_flightPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Double,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('admin_add_flight');
  late final _admin_add_flight = _admin_add_flightPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          double,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  int admin_cancel_flight(int flightID) {
    return _admin_cancel_flight(flightID);
  }

  late final _admin_cancel_flightPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'admin_cancel_flight',
      );
  late final _admin_cancel_flight = _admin_cancel_flightPtr
      .asFunction<int Function(int)>();

  int get_flight_count() {
    return _get_flight_count();
  }

  late final _get_flight_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('get_flight_count');
  late final _get_flight_count = _get_flight_countPtr
      .asFunction<int Function()>();

  void get_flight_by_index(
    int index,
    ffi.Pointer<ffi.Char> out_id,
    ffi.Pointer<ffi.Char> out_from,
    ffi.Pointer<ffi.Char> out_to,
    ffi.Pointer<ffi.Char> out_date,
    ffi.Pointer<ffi.Char> out_time,
    ffi.Pointer<ffi.Double> out_price,
    ffi.Pointer<ffi.Int> out_is_full,
  ) {
    return _get_flight_by_index(
      index,
      out_id,
      out_from,
      out_to,
      out_date,
      out_time,
      out_price,
      out_is_full,
    );
  }

  late final _get_flight_by_indexPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Double>,
            ffi.Pointer<ffi.Int>,
          )
        >
      >('get_flight_by_index');
  late final _get_flight_by_index = _get_flight_by_indexPtr
      .asFunction<
        void Function(
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Int>,
        )
      >();

  int book_ticket(
    ffi.Pointer<ffi.Char> passengerID,
    int flightID,
    ffi.Pointer<ffi.Char> seat,
    int isBusinessClass,
  ) {
    return _book_ticket(passengerID, flightID, seat, isBusinessClass);
  }

  late final _book_ticketPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
          )
        >
      >('book_ticket');
  late final _book_ticket = _book_ticketPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>, int)
      >();

  int cancel_ticket(int ticketID) {
    return _cancel_ticket(ticketID);
  }

  late final _cancel_ticketPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('cancel_ticket');
  late final _cancel_ticket = _cancel_ticketPtr.asFunction<int Function(int)>();

  int get_ticket_count_for_passenger(ffi.Pointer<ffi.Char> passengerID) {
    return _get_ticket_count_for_passenger(passengerID);
  }

  late final _get_ticket_count_for_passengerPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'get_ticket_count_for_passenger',
      );
  late final _get_ticket_count_for_passenger =
      _get_ticket_count_for_passengerPtr
          .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  void get_ticket_by_index(
    ffi.Pointer<ffi.Char> passengerID,
    int index,
    ffi.Pointer<ffi.Int> out_ticketID,
    ffi.Pointer<ffi.Int> out_flightID,
    ffi.Pointer<ffi.Char> out_seat,
    ffi.Pointer<ffi.Int> out_isBusiness,
    ffi.Pointer<ffi.Double> out_totalPrice,
  ) {
    return _get_ticket_by_index(
      passengerID,
      index,
      out_ticketID,
      out_flightID,
      out_seat,
      out_isBusiness,
      out_totalPrice,
    );
  }

  late final _get_ticket_by_indexPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Double>,
          )
        >
      >('get_ticket_by_index');
  late final _get_ticket_by_index = _get_ticket_by_indexPtr
      .asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Double>,
        )
      >();

  int add_luggage_to_ticket(int ticketID, double weight, int isCabin) {
    return _add_luggage_to_ticket(ticketID, weight, isCabin);
  }

  late final _add_luggage_to_ticketPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Double, ffi.Int)>
      >('add_luggage_to_ticket');
  late final _add_luggage_to_ticket = _add_luggage_to_ticketPtr
      .asFunction<int Function(int, double, int)>();

  int get_luggage_count_for_ticket(int ticketID) {
    return _get_luggage_count_for_ticket(ticketID);
  }

  late final _get_luggage_count_for_ticketPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'get_luggage_count_for_ticket',
      );
  late final _get_luggage_count_for_ticket = _get_luggage_count_for_ticketPtr
      .asFunction<int Function(int)>();

  double get_ticket_total_weight(int ticketID) {
    return _get_ticket_total_weight(ticketID);
  }

  late final _get_ticket_total_weightPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Int)>>(
        'get_ticket_total_weight',
      );
  late final _get_ticket_total_weight = _get_ticket_total_weightPtr
      .asFunction<double Function(int)>();

  double get_ticket_extra_fee(int ticketID) {
    return _get_ticket_extra_fee(ticketID);
  }

  late final _get_ticket_extra_feePtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Int)>>(
        'get_ticket_extra_fee',
      );
  late final _get_ticket_extra_fee = _get_ticket_extra_feePtr
      .asFunction<double Function(int)>();

  int ticket_has_extra_fees(int ticketID) {
    return _ticket_has_extra_fees(ticketID);
  }

  late final _ticket_has_extra_feesPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'ticket_has_extra_fees',
      );
  late final _ticket_has_extra_fees = _ticket_has_extra_feesPtr
      .asFunction<int Function(int)>();

  int get_user_count() {
    return _get_user_count();
  }

  late final _get_user_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('get_user_count');
  late final _get_user_count = _get_user_countPtr.asFunction<int Function()>();

  void get_user_by_index(
    int index,
    ffi.Pointer<ffi.Char> out_name,
    ffi.Pointer<ffi.Char> out_id,
  ) {
    return _get_user_by_index(index, out_name, out_id);
  }

  late final _get_user_by_indexPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('get_user_by_index');
  late final _get_user_by_index = _get_user_by_indexPtr
      .asFunction<
        void Function(int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  int edit_passenger_phone(
    ffi.Pointer<ffi.Char> passengerID,
    ffi.Pointer<ffi.Char> newPhone,
  ) {
    return _edit_passenger_phone(passengerID, newPhone);
  }

  late final _edit_passenger_phonePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('edit_passenger_phone');
  late final _edit_passenger_phone = _edit_passenger_phonePtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  int edit_passenger_email(
    ffi.Pointer<ffi.Char> passengerID,
    ffi.Pointer<ffi.Char> newEmail,
  ) {
    return _edit_passenger_email(passengerID, newEmail);
  }

  late final _edit_passenger_emailPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('edit_passenger_email');
  late final _edit_passenger_email = _edit_passenger_emailPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void get_passenger_info(
    ffi.Pointer<ffi.Char> id,
    ffi.Pointer<ffi.Char> out_name,
    ffi.Pointer<ffi.Char> out_mail,
    ffi.Pointer<ffi.Char> out_phone,
  ) {
    return _get_passenger_info(id, out_name, out_mail, out_phone);
  }

  late final _get_passenger_infoPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('get_passenger_info');
  late final _get_passenger_info = _get_passenger_infoPtr
      .asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  int get_available_seat_count(int flightID, int isBusinessClass) {
    return _get_available_seat_count(flightID, isBusinessClass);
  }

  late final _get_available_seat_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
        'get_available_seat_count',
      );
  late final _get_available_seat_count = _get_available_seat_countPtr
      .asFunction<int Function(int, int)>();

  void get_seat_by_index(
    int flightID,
    int isBusinessClass,
    int index,
    ffi.Pointer<ffi.Char> out_seat,
  ) {
    return _get_seat_by_index(flightID, isBusinessClass, index, out_seat);
  }

  late final _get_seat_by_indexPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<ffi.Char>)
        >
      >('get_seat_by_index');
  late final _get_seat_by_index = _get_seat_by_indexPtr
      .asFunction<void Function(int, int, int, ffi.Pointer<ffi.Char>)>();

  void save_all_data() {
    return _save_all_data();
  }

  late final _save_all_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('save_all_data');
  late final _save_all_data = _save_all_dataPtr.asFunction<void Function()>();

  void load_all_data() {
    return _load_all_data();
  }

  late final _load_all_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('load_all_data');
  late final _load_all_data = _load_all_dataPtr.asFunction<void Function()>();

  int add_admin(
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Char> id,
    ffi.Pointer<ffi.Char> phone,
    ffi.Pointer<ffi.Char> email,
  ) {
    return _add_admin(name, id, phone, email);
  }

  late final _add_adminPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('add_admin');
  late final _add_admin = _add_adminPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  int remove_admin(ffi.Pointer<ffi.Char> id) {
    return _remove_admin(id);
  }

  late final _remove_adminPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'remove_admin',
      );
  late final _remove_admin = _remove_adminPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();
}
